Fixed the hover color for the site name on tablets.  With it being a dark red then going to blue on hover, it did not look good at all.

--- a/wp-content/themes/idmygadget_twentythirteen/idMyGadget/css/idMyGadget-tablet.css
+++ b/wp-content/themes/idmygadget_twentythirteen/idMyGadget/css/idMyGadget-tablet.css
@@ -31,6 +31,9 @@
  *    Reference: http://stackoverflow.com/questions/4774022/whats-default-html-css-link-color
  *
  */
+a.site-name-tablet:hover {
+	color: #A03030;
+}
 a:visited {
 	color: #A03030;   /* See comment in header formerly: #ac0404; (brown) */
 }
